--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -38,4 +38,4 @@ jobs:
       run: pylint __init__.py
 
     - name: Test
-      run: python -m unittest discover tests/
+      run: python -m unittest discover /
